@@ -1,8 +1,8 @@
-# $NetBSD: Makefile,v 1.75 2012/03/21 21:14:47 markd Exp $
+# $NetBSD: Makefile,v 1.76 2012/06/14 07:44:26 sbd Exp $
 #
 
 DISTNAME=	digikam-2.5.0
-PKGREVISION=	1
+PKGREVISION=	2
 CATEGORIES=	graphics
 MASTER_SITES=	${MASTER_SITE_SOURCEFORGE:=digikam/}
 EXTRACT_SUFX=	.tar.bz2
