@@ -1,9 +1,9 @@
-# $NetBSD: Makefile,v 1.69 2012/03/21 21:03:50 markd Exp $
+# $NetBSD: Makefile,v 1.70 2012/06/14 07:44:26 sbd Exp $
 #
 
 PKGNAME=	kipi-plugins-2.5.0
 DISTNAME=	digikam-2.5.0
-PKGREVISION=	1
+PKGREVISION=	2
 CATEGORIES=	graphics
 MASTER_SITES=	${MASTER_SITE_SOURCEFORGE:=digikam/}
 EXTRACT_SUFX=	.tar.bz2
