@@ -1,8 +1,8 @@
-# $NetBSD: Makefile,v 1.29 2012/03/19 11:46:44 markd Exp $
+# $NetBSD: Makefile,v 1.30 2012/06/14 07:43:33 sbd Exp $
 
 DISTNAME=	kdepimlibs-${_KDE_VERSION}
 PKGNAME=	${DISTNAME:S/-4/4-4/}
-PKGREVISION=	1
+PKGREVISION=	2
 CATEGORIES=	misc
 COMMENT=	Support libraries for PIM for the KDE integrated X11 desktop
 
@@ -18,6 +18,7 @@ BUILDLINK_API_DEPENDS.akonadi+=  akonadi>=1.5.52
 
 .include "../../databases/openldap-client/buildlink3.mk"
 .include "../../devel/boost-libs/buildlink3.mk"
+.include "../../devel/libuuid/buildlink3.mk"
 .include "../../mail/akonadi/buildlink3.mk"
 .include "../../security/cyrus-sasl/buildlink3.mk"
 .include "../../security/gpgme/buildlink3.mk"
