@@ -1,8 +1,8 @@
-# $NetBSD: Makefile,v 1.26 2012/04/15 03:51:41 markd Exp $
+# $NetBSD: Makefile,v 1.27 2012/06/14 07:44:28 sbd Exp $
 
 DISTNAME=	kdeplasma-addons-${_KDE_VERSION}
 PKGNAME=	${DISTNAME:S/-4/4-4/}
-PKGREVISION=	1
+PKGREVISION=	2
 CATEGORIES=	misc
 COMMENT=	Plasmoids
 
