@@ -1,8 +1,8 @@
-# $NetBSD: Makefile,v 1.50 2012/04/27 12:31:55 obache Exp $
+# $NetBSD: Makefile,v 1.51 2012/06/14 07:44:29 sbd Exp $
 #
 
 DISTNAME=	tellico-2.3.5
-PKGREVISION=	3
+PKGREVISION=	4
 CATEGORIES=	misc
 MASTER_SITES=	http://tellico-project.org/files/
 EXTRACT_SUFX=	.tar.bz2
