@@ -1,8 +1,8 @@
-# $NetBSD: Makefile,v 1.54 2012/05/29 18:14:13 cheusov Exp $
+# $NetBSD: Makefile,v 1.55 2012/06/02 09:32:30 cheusov Exp $
 
 .include "../../sysutils/coreutils/Makefile.common"
 
-PKGREVISION=	2
+PKGREVISION=	3
 
 CONFLICTS=	fileutils-[0-9]* gnuls-[0-9]* linuxls-[0-9]* sh-utils-[0-9]* textutils-[0-9]*
 
@@ -59,6 +59,7 @@ post-install:
 #MESSAGE_SUBST+=	OPSYS=${OPSYS:Q}
 #.endif
 
+.include "../../devel/gmp/buildlink3.mk"
 .include "../../converters/libiconv/buildlink3.mk"
 .include "../../devel/gettext-lib/buildlink3.mk"
 .include "../../mk/bsd.pkg.mk"
