@@ -1,8 +1,8 @@
-# $NetBSD: Makefile,v 1.3 2012/05/14 07:03:08 sbd Exp $
+# $NetBSD: Makefile,v 1.4 2012/06/14 07:43:34 sbd Exp $
 
 DISTNAME=	kde-workspace-${_KDE_VERSION}
 PKGNAME=	${DISTNAME:S/-4/4-4/}
-PKGREVISION=	1
+PKGREVISION=	2
 CATEGORIES=	x11
 COMMENT=	Base workspace for the KDE 4 integrated X11 desktop
 
