@@ -1,7 +1,7 @@
-# $NetBSD: Makefile,v 1.4 2012/05/15 21:58:50 joerg Exp $
+# $NetBSD: Makefile,v 1.5 2012/06/14 07:44:29 sbd Exp $
 
 PKGNAME=	${PYPKGPREFIX}-kde4-${_KDE_VERSION}
-PKGREVISION=	2
+PKGREVISION=	3
 DISTNAME=	pykde4-${_KDE_VERSION}
 CATEGORIES=	misc
 COMMENT=	Python bindings for the KDE integrated X11 desktop
